# CTME-llm-lecture-resources

./: .gitignore  01_getting_started_with_llms_nbeaudoin.ipynb  03_text_splitting.ipynb  README.md  environment.yaml  pyproject.toml  rag_and_agents.ipynb
01_intro_to_llms/: 01_log_sum_exp.ipynb
02_using_llms/: 01_figures.ipynb  02_prompting_techniques.ipynb
03_fine_tuning/: 01_chat_templates.ipynb
aramco/: fine_tuning_and_inference_with_axolotl_2024_10_23.ipynb
data/: ecommerce.db  eval.jsonl  eval.parquet  train.jsonl  train.parquet
finetuning/: fine_tuning_and_inference_with_axolotl.ipynb
labs/: Getting_started_with_LLMs.ipynb  Getting_started_with_LLMs_solution.ipynb  ctme_dspy_playground.ipynb  fine_tuning_and_inference_with_axolotl.ipynb  fine_tuning_and_inference_with_axolotl_soluton.ipynb  getting_started_with_LLMs.ipynb  getting_started_with_LLMs_solution.ipynb  rag_and_agents.ipynb  rag_and_agents_solution.ipynb
prototyping_ai/: 01_getting_started_with_llms.ipynb  01_getting_started_with_llms_20241123.ipynb  01_getting_started_with_llms_solution.ipynb  01_getting_started_with_openai.ipynb  02_rag_and_agents.ipynb  02_rag_and_agents_solution.ipynb  _resources.ipynb  mipro_optimized_few_shot.json  test.json
resources/: ollama.ipynb
