[project]
name = "ctme-llm-lecture-resources"
version = "0.1.0"
description = "Code for the CTME LLM lecture resources. This pyproject.toml is for dependency management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-readers-web>=0.3.0",
    "llama-index>=0.12.2",
    "thefuzz>=0.22.1",
    "gradio>=5.7.1",
    "chromadb>=0.5.20",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-retrievers-bm25>=0.5.0",
    "llama-index-llms-gemini>=0.4.0",
    "docling>=2.8.1",
    "llama-index-readers-docling>=0.3.0",
    "llama-index-node-parser-docling>=0.3.0",
    "pystemmer>=2.2.0.3",
    "llama-index-utils-workflow>=0.3.0",
    "autogen-agentchat~=0.2",
    "llama-index-tools-yahoo-finance>=0.3.0",
]
